<resources>
    <string name="login_app_name">mod_login</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_user_login">用户登录</string>
    <string name="login_register_imm">立即注册</string>
    <string name="login_password">密码</string>
    <string name="login_username">用户名</string>
    <string name="login_error_exceed_max_length">输入已超过最大数量限制！</string>
    <string name="login_error_username_contains_illegal_cahr">用户名包含非法字符!</string>
    <string name="login_error_username_empty">用户名不可为空！</string>
    <string name="login_error_password_empty">密码不可为空！</string>
    <string name="login_error_password_repeat">需要重复一次密码!</string>
    <string name="login_error_password_not_equals">密码不匹配！</string>
    <string name="login_error_register_contained">用户已存在！</string>
    <string name="login_error_register_failed">注册失败！</string>
</resources>